<resources>
    <string name="app_name">Smart Warehouse</string>
    <string name="title">Percobaan</string>
    <string name="button1">Masuk</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="list_barang">List Barang</string>
    <string name="barang_kosong">Barang Kosong</string>
    <string name="barang_retur">Barang Retur</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Warehouse</string>
    <string name="user">User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lupa_password">Lupa Kata Sandi?</string>
    <string name="atau">ATAU</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="data1">200</string>
    <string name="data2">300</string>
    <string name="dataString1">Barang Masuk</string>
    <string name="dataString2">Barang Keluar</string>
    <string name="dataString3">HOME</string>
</resources>
